name:                hello
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base
  exposed-modules:     Hello

test-suite test-hello
  build-depends:       base, hello
  Type:                exitcode-stdio-1.0
  main-is:             Main.hs
