name:                hello
version:             0.1.0.0
build-type:          Custom
cabal-version:       >=1.10

library
  build-depends:       base
  exposed-modules:     Hello
  default-language:    Haskell2010

test-suite test-hello
  build-depends:       base, hello, process
  Type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
